styles.css
body {
    /* Typography */
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    background-image: url("assets/iStock-2198117145.jpg");    
}
html {
    /* Positioning */
    position: relative;
  
    /* Box-model */
    min-height: 100%;

  }
  
  /* add space for fixed nav */
  main {
    margin: 80px 0;
  }
  
  /* create styles for use for all white main boxes */
  .block {
    background-color: #bdbdbd;
    margin-top: -90px;
    margin-left: -20px;
    padding: 30px;
    margin-bottom: 30px;
  }
  
  .block-header {
    /* Typography */
    color: #4aaaa5;
    font-family: Georgia, Times, "Times New Roman", serif;
    font-weight: bold;
  }


    /* override bootstrap hover color and border */
    .navbar-default .navbar-nav > li > a:hover {
      color: #4aaaa5;
    }
    
    .navbar {
      background: #000000;
      border: none;
    }
    .navbar-brand{
      text-align: left;
    }
    .container{
      
      max-width: 960px;
      max-height: max-content;
      margin:auto;
      padding: 10px;
      padding-left: 20px;
      padding-right: 20px;
  }
  .container1{
    background-color: #ef2cb4;
    color: #ffffff;
    opacity: 0.9;
    max-width: 960px;
    max-height: max-content;
    margin:auto;
    margin-top: 50px;
    margin-bottom: 80px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
  }
  .container2{
    background-color: #ffffff;
    color: #000000;
    max-width: 960px;
    border: #351f1f;
    border-radius: 10px;
    box-shadow: #bdbdbd;
    max-height: max-content;
    margin:auto;
    margin-top: 50px;
    margin-bottom: 80px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
}
  textarea {
    width: 500px;
  }
    
    /* media query for nav background color change */
    @media only screen and (max-width: 767px) {
      .navbar-header {
        background-color: #ffffff;
      }
    }
    /* CONNECT W/ ME CSS */
  .connect-header {
      /* Typography */
      font-size: 25px;
    }

  /* BEGIN FOOTER */
  .footer {
    /* Positioning */
    position: fixed;
    bottom: 0;
  
    /* Box-model */
    width: 100%;
    height: 60px;
  
    /* Visual */
    background-color: #ffffff;


  }
.row {
    float: right;
}

